--- a/src/index.css
+++ b/src/index.css
@@ -776,3 +776,7 @@ span.flatpickr-weekday,
 .simplebar-scrollbar.simplebar-visible:before {
   @apply opacity-100;
 }
+
+.swal-z-index {
+  z-index: 99999 !important;
+}
